# sc-load-perf

./: 2025-04-10-Getting-Started.ipynb  main.py  pyproject.toml
src/sc_load_perf/: data_load_stats.py
